make pageblock height fixed to prevent overflow

--- a/wp-content/themes/dyad/style.css
+++ b/wp-content/themes/dyad/style.css
@@ -115,7 +115,7 @@ div#homepage-content{
 }
 
 .pageblock {
-	min-height: 200px;
+	height: 200px;
 	background-color: #dedede;
 	float: left;
 	width: 50%;
